--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gsap": "^3.12.5",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20",
