--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
+    "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
